﻿$Revision$
	$Author$ $Date$
	1. теперь базы раскраски хранятся в папке base, и при запуске базы ищутся либо
		в этой папке, либо по указанному в настройках пути.

#Revision: 1592
	Author: ctapmex Date: 2010-10-25 15:56:13 +0600 (Пн, 25 окт 2010)
	1. в диалог настроек добавлено описание причины не включения TrueMod

#Revision: 1591
	$Author: ctapmex Date: 2010-10-25 14:14:19 +0600 (Пн, 25 окт 2010)
	1. при ошибке нахождения баз ( ReloadBase) плагин падает

#Revision: 1590
	Author: ctapmex Date: 2010-10-25 14:09:06 +0600 (Пн, 25 окт 2010)
	1. отмена 1589 , неожиданное поведение "отмена действия " в VC

#Revision: 1589
	Author: ctapmex Date: 2010-10-25 13:57:06 +0600 (Пн, 25 окт 2010)
	1. при ошибке нахождения баз ( ReloadBase) плагин падает

#Revision: 1579
	Author: ctapmex Date: 2010-10-17 23:04:53 +0600 (Вс, 17 окт 2010)
	1. крест был всегда черным

#Revision: 1578
	Author: ctapmex Date: 2010-10-17 22:18:44 +0600 (Вс, 17 окт 2010)
	1. косметика диалога настроек
	2. доделал 1575

#Revision: 1577
	Author: ctapmex Date: 2010-10-14 21:03:53 +0600 (Чт, 14 окт 2010)
	1. продолжаем 1576.1

#Revision: 1576
	Author: ctapmex Date: 2010-10-14 17:19:06 +0600 (Чт, 14 окт 2010)
	1. дооптимизировался :(. исправленs проблемы с раскраской блочных комментариев

#Revision: 1575
	Author: ctapmex Date: 2010-10-14 14:48:48 +0600 (Чт, 14 окт 2010)
	1. clr при включенном truemod работал некоректно.

#Revision: 1569
	Author: ctapmex Date: 2010-10-13 17:19:54 +0600 (Ср, 13 окт 2010)
	1. неверное определение truemod для смены фона редактора
	2. отдельная настройка для цветового стиля truemod

#Revision: 1567
	Author: ctapmex Date: 2010-10-12 19:46:49 +0600 (Вт, 12 окт 2010)
	1. отключаем крест и смену фона редактора для truemode.

#Revision: 1566
	Author: ctapmex Date: 2010-10-07 16:00:01 +0600 (Чт, 07 окт 2010)
	1. ошибка при сохранении параметров, если до этого не был открыт редактор

#Revision: 1565
	Author: ctapmex Date: 2010-10-06 17:11:53 +0600 (Ср, 06 окт 2010)