@@ -438,6 +438,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\FarHrcSettings.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\FarHrcSettings.h"
 				>
 			</File>
