@@ -1,5 +1,9 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. читаем far`овские параметры не из proto.hrc, а из hrcsettings.xml
+
+#Revision: 1594
+	Author: ctapmex Date: 2010-10-25 20:17:52 +0600 (Пн, 25 окт 2010)
 	1. теперь базы раскраски хранятся в папке base, и при запуске базы ищутся либо
 		в этой папке, либо по указанному в настройках пути.
 
@@ -8,7 +12,7 @@
 	1. в диалог настроек добавлено описание причины не включения TrueMod
 
 #Revision: 1591
-	$Author: ctapmex Date: 2010-10-25 14:14:19 +0600 (Пн, 25 окт 2010)
+	Author: ctapmex Date: 2010-10-25 14:14:19 +0600 (Пн, 25 окт 2010)
 	1. при ошибке нахождения баз ( ReloadBase) плагин падает
 
 #Revision: 1590
